# Tourism-Reports-LLM

./: .env.example  .gitignore  CLAUDE.md  DESIGN_DOC.md  Makefile  README.md  mlflow.db.dvc  mlruns.dvc  notebooks.dvc  pyproject.toml  reports.dvc
.dvc/: config
Prompts/NoFT/: response.md
app/: api.py  frontend.py  report_cache.py  report_exporter.py
data/: .gitignore  restmex.dvc
data/PueblosMagicos/: raw.dvc
data/PueblosMagicos/interim/: .gitignore  isla_mujeres.parquet.dvc  main_dataset.parquet.dvc
data/chromadb/: .gitignore  restmex_reduced.dvc  restmex_reduced_v2.dvc  restmex_sss_cs200_ov50.dvc
docs/: presentacion_RAG.tex
notebooks/: 0-Stat_per_mt.ipynb  1-map-reduce.ipynb  dataset_reducido.ipynb
reports/Tesis/: gha_tesis_26.bbl  gha_tesis_26.tex  references.bib
reports/Tesis/chapters/: appendix.aux  chap_01.aux  chap_01.tex  chap_02.aux  chap_02.tex  chap_03.aux  chap_03.tex  chap_04.aux  chap_04.tex  conclusions.aux
scripts/: generate_all_reports.py  get_review_by_id.py  ingest_reviews.py  test_opportunity_workflow.py  test_workflow.py  visualize_graphs.py
voz_turista/: config.py
voz_turista/application/: workflow.py
voz_turista/application/opportunity_workflow/: __init__.py  graph.py  nodes.py  prompts.py  session.py  state.py
voz_turista/application/workflow/: __init__.py  edges.py  graph.py  nodes.py  prompts.py  session.py  state.py
voz_turista/domain/: schemas.py
voz_turista/domain/prompts/: templates.py
voz_turista/infrastructure/database/: chroma_client.py  utils.py
voz_turista/infrastructure/llm_providers/: base.py  google_provider.py  litellm_provider.py
voz_turista/tools/: validate_queries.py
