[project]
name = "tourism-reports-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "unsloth>=2025.10.3",
    "beautifulsoup4>=4.14.3",
    "dvc>=3.64.2",
    "dvc-gdrive>=3.0.1",
    "numpy>=2.4.0",
    "requests>=2.32.5",
]