[project]
name = "tourism-reports-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi[standard]>=0.127.0",
    "langchain>=1.2.15",
    "langchain-core>=1.2.4",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "litellm>=1.72.0",
    "mlflow>=3.10.1",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "beautifulsoup4>=4.14.3",
    "dvc>=3.64.2",
    "dvc-gdrive>=3.0.1",
    "requests>=2.32.5",
    "ipywidgets>=8.1.8",
    "cudf-cu12==25.12.*",
]
